Them issue rresolved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,11 @@
 
 /* ---- tokens ---- */
 :root{
-  --background:#ffffff;
-  --foreground:#171717;
+  --background:#080808;
+  --foreground:#ededed;
+
+    /* --background:#ffffff;
+  --foreground:#171717; */
 
   /* mouse glow vars */
   --mouse-x:50vw;
